<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".thembh">
    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f2f2"
        android:stretchColumns="*">
        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#006fc9">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="#FFFFFF"
                android:text="@string/themhd"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="25dp"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:id="@+id/tvKH"
                android:textColor="#000000"
                android:text="@string/tenkh"/>
            <Spinner
                android:id="@+id/spChonKH"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:id="@+id/tvMon"
                android:textColor="#000000"
                android:text="@string/tenmon"/>
            <Spinner
                android:id="@+id/spChonMon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:id="@+id/tvSL"
                android:textColor="#000000"
                android:text="@string/SoLuong"/>
            <EditText
                android:id="@+id/edtSoLuong"
                android:textColor="#000000"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:id="@+id/tvTG"
                android:textColor="#000000"
                android:text="Ngày: "/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <DatePicker
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:datePickerMode="spinner"/>
        </TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Luu"
            android:id="@+id/btnLuuMon"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/btnHuyMon"/>
    </TableLayout>
</LinearLayout>