<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginGamen">

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f2f2"
        android:stretchColumns="*">
        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#006fc9">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="#FFFFFF"
                android:text="@string/logingamen"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="25dp"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:id="@+id/tvUser"
                android:text="@string/usernmae"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/edtUser"
                android:layout_span="3"
                android:textColor="#000000" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:id="@+id/tvPass"
                android:text="Password"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_span="3"
                android:inputType="textPassword"
                android:textColor="#000000" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ffffff"
                android:text="@string/log"
                android:textColor="#000000"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ffffff"
                android:text="@string/exit"
                android:textColor="#000000"
                app:backgroundTint="@color/white" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="234dp"
            android:layout_marginTop="25dp"
            android:gravity="right">

            <TextView
                android:id="@+id/tvSaipass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginRight="25dp"
                android:text=""
                android:textStyle="italic"
                android:textColor="#F02849" />
            <TextView
                android:id="@+id/btnForgot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="25dp"
                android:text="@string/forgotpass"
                android:textStyle="italic"
                android:textColor="#F02849" />
        </TableRow>
    </TableLayout>
</LinearLayout>