<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f2f2"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#006fc9">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_gravity="center"
                android:text="@string/welcome"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="234dp"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnSelf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/self"
                android:textColor="#000000"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/btnCostmermng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/cost"
                android:textColor="#000000"
                app:backgroundTint="@color/white"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="234dp"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnQLMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="Q.LÝ MÓN"
                android:textColor="#000000"
                app:backgroundTint="@color/white" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="234dp"
            android:layout_marginTop="25dp"
            android:gravity="right">

            <TextView
                android:id="@+id/btnSignout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="25dp"
                android:text="@string/signout"
                android:textStyle="italic"
                android:textColor="#F02849" />
        </TableRow>
    </TableLayout>
</LinearLayout>